--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
 
         <section class="questions">
             <h4> ВОПРОСЫ</h4>
-            <p>1. Не получается настроить клик на свободное пространство экрана при активном окне блока Меню. Я растянула блок меню на всю ширину экрана (может быть стоит на этом моменте остановиться и ограничиться шириной оранжевого блока), и пытаюсь прописать в скриптах следующее: если происходит клик на родительский блок, в котором находится оранжевый блок меню, при этом этот клик происходит вне оранжевого блока, меню должно закрываться. </p>
-            <p>2. Небольшой вопрос про transition на открывающемся блоке Меню (navigation), почему-то блок выезжает плавно только при открытии, а он должен еще и плавно исчезать. Мне кажется, я как-то не так этот transitions прописываю (в коде - transition: left 0.5s)</p>
-            <p>3. Не могу понять, почему не работает setTimeOut на модальном окне, которое открывается при нажатии на кнопку Отправить сообщение. Я оставила в js файле один из вариантов кода, которые я пробовала.</p>
+            <p>1. Не получается настроить клик на свободное пространство экрана при активном окне блока Меню. Я растянула родительский блок navigation на всю ширину экрана и внутри него прописала оранжевый блок navigation_content на 350px (может быть стоит на этом моменте остановиться и оставить только внутренний блок?), и пытаюсь прописать в скриптах следующее: если происходит клик на блок navigation, при этом этот клик происходит вне блока navigation_content, меню должно закрываться. Но что-то пошло не так.</p>
+            <p>2. Небольшой вопрос про transition на открывающемся блоке Меню (navigation), почему-то блок выезжает плавно только при открытии, а при закрытии окна он сразу исчезает. Мне кажется, я как-то не так этот transitions прописываю (в коде - transition: left 0.5s)</p>
+            <p>3. Не могу понять, почему не работает setTimeOut на модальном окне, которое открывается при нажатии на кнопку Отправить сообщение. Если я не прописываю условие, что setTimeOut должен срабатывать только при наличии у блока класса active, то окно закрывается и все работает (не совсем так, как должно, о работает), если условие появляется, то не работает вообще ничего. Я оставила в js файле один из вариантов кода, которые я пробовала.</p>
         </section>
 </article>
 
